microservices/data-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data
  template:
    metadata:
      labels:
        app: data
    spec:
      containers:
      - name: data
        image: dominikmascherbauer/data:test
        ports:
        - containerPort: 3005
        - containerPort: 3006
---
apiVersion: v1
kind: Service
metadata:
  name: data-service
spec:
  selector:
    app: data
  ports:
  - name: api
    port: 3005
    protocol: TCP
    targetPort: 3005
  - name: ws
    port: 3006
    protocol: TCP
    targetPort: 3006
