microservices/database-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: dominikmascherbauer/database:test
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector:
    app: database
  ports:
  - name: api
    port: 3002
    protocol: TCP
    targetPort: 3002
