microservices/zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # requires port forwarding in minikube
  # minikube kubectl -- port-forward --address 0.0.0.0 service/zipkin-service 9411:9411
  name: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: zipkin
        image: openzipkin/zipkin
        imagePullPolicy: "Always"
        ports:
        - containerPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
spec:
  selector:
    app: zipkin
  ports:
  - name: collector
    port: 9411
    protocol: TCP
    targetPort: 9411
