microservices/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # requires port forwarding in minikube
  # minikube kubectl -- port-forward --address 0.0.0.0 service/ingress-nginx-controller 8080:80 -n ingress-nginx
  name: ingress-controller
  annotations: 
    # tells the ingress controller to rewrite paths
    # we want to rewrite /user/api/user/... to just /api/user/.. and pass it on to the user service
    # same for other routes 
    # $1 takes the first match group from the regex
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    name: ingress-controller
spec:
  ingressClassName: nginx
  rules:
  - host: tennis.mascherbauer.com
    http:
      paths:
      - path: /user/(.*)  # captures everything after user
        pathType:  ImplementationSpecific
        backend:
          service:
            name: user-service
            port: 
              number: 3000
      - path: /data/(.*)  # captures everything after data
        pathType: ImplementationSpecific
        backend:
          service:
            name: data-service
            port: 
              number: 3000
      - path: /ws/(.*)  # captures everything after ws
        pathType: ImplementationSpecific
        backend:
          service:
            name: data-service
            port: 
              number: 3001
      - path: /(.*)  # captures everything else
        pathType: ImplementationSpecific
        backend:
          service:
            name: web-service
            port:
              number: 3000
